k8s/pastebin-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pastebin-api-service
spec:
  selector:
    app: pastebin-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
