k8s/pastebin-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pastebin-redis-service
spec:
  selector:
    app: pastebin-redis
  clusterIP: None
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
